# celery-demo

./: Dockerfile.api  Dockerfile.celery  Dockerfile.flower  README.md  celeryconfig.py  main.py  pyproject.toml  queue_worker.py  settings.py
