[tool.poetry]
name = "celery-test"
version = "0.1.0"
description = ""
authors = ["Charles DZADU <dzaducharles@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
celery = {extras = ["redis"], version = "^5.4.0"}
fastapi = {extras = ["standard"], version = "^0.115.8"}
flower = "^2.0.1"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
